--- a/index.html
+++ b/index.html
@@ -9,21 +9,38 @@
     <title>Beat the House</title>
 </head>
 <body>
+    <audio src="assets/age-of-war.mp3" autoplay loop></audio>
     <header id="title">
         <h1>Beat the House</h1>
     </header>
     <section id="dealer">
-        <h2>Dealer</h2>
         <span>
-            <img id="dealer-card1">
-            <img id="dealer-card2">
+            <h2>Dealer</h2>
+            <p>Squirrel Pelts:</p>
+        </span>
+        <span>
+            <img id="dealer-card-1">
+            <img id="dealer-card-2">
         </span>
     </section>
     <section id="player">
-        <h2>Player</h2>
         <span>
-            <img id="player-card1">
-            <img id="player-card2">
+            <h2>Player</h2>
+            <p>Squirrel Pelts:</p>
+        </span>
+        <span>
+            <img id="player-card-1">
+            <img id="player-card-2">
+        </span>
+    </section>
+    <section id="controls">
+        <span id="out-game-controls">
+            <button id="deal-button">Deal</button>
+            <button id="all-in-button">All-In</button>
+        </span>
+        <span id="in-game-controls">
+            <button id="hit-button">Hit</button>
+            <button id="stand-button">Stand</button>
         </span>
     </section>
     
