--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="index.js"></script>
-    <link src="index.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Beat the House</title>
 </head>
 <body>
-    <audio src="assets/age-of-war.mp3" autoplay loop></audio>
+    <!-- <audio src="assets/age-of-war.mp3" autoplay loop></audio> -->
     <header id="title">
         <h1>Beat the House</h1>
     </header>
@@ -18,7 +18,7 @@
             <h2>Dealer</h2>
             <p>Squirrel Pelts:</p>
         </span>
-        <span>
+        <span id ="dealer-hand">
             <img id="dealer-card-1">
             <img id="dealer-card-2">
         </span>
@@ -28,7 +28,7 @@
             <h2>Player</h2>
             <p>Squirrel Pelts:</p>
         </span>
-        <span>
+        <span id="player-hand">
             <img id="player-card-1">
             <img id="player-card-2">
         </span>
