--- a/index.html
+++ b/index.html
@@ -7,42 +7,57 @@
     <script defer src="index.js"></script>
     <link href="style.css" rel="stylesheet">
     <title>Beat the House</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
-    <!-- <audio src="assets/age-of-war.mp3" autoplay loop></audio> -->
-    <header id="title">
-        <h1>Beat the House</h1>
-    </header>
-    <section id="dealer">
-        <span>
-            <h2>Dealer</h2>
-            <p>Squirrel Pelts:</p>
-        </span>
-        <span id ="dealer-hand">
-            <img id="dealer-card-1">
-            <img id="dealer-card-2">
-        </span>
-    </section>
-    <section id="player">
-        <span>
-            <h2>Player</h2>
-            <p>Squirrel Pelts:</p>
-        </span>
-        <span id="player-hand">
-            <img id="player-card-1">
-            <img id="player-card-2">
-        </span>
-    </section>
-    <section id="controls">
+    <audio src="assets/cuphead.mp3" autoplay muted loop type="audio/mpeg"></audio>
+
+    <div id="title">
+        <h1>Beat the House!</h1>
         <span id="out-game-controls">
             <button id="deal-button">Deal</button>
             <button id="all-in-button">All-In</button>
         </span>
-        <span id="in-game-controls">
-            <button id="hit-button">Hit</button>
-            <button id="stand-button">Stand</button>
-        </span>
-    </section>
+        <form id="bet-form">
+            <label for="bet-input">Bet ur squirrels</label>
+            <input id="bet-input" name="bet-input" type="text" placeholder="Enter amount..." />
+            <button type="submit" id="bet-button">Bet</button>
+            <p id="account-balance"
+
+        </form>
+    </div>
+
+    <div id="in-game">
+        <section id="dealer">
+            <span>
+                <h2>Dealer</h2>
+                <p>Squirrel Pelts:</p>
+                <p id="dealer-money"></p>
+            </span>
+            <span id ="dealer-hand">
+                <img id="dealer-card-1">
+                <img id="dealer-card-2">
+            </span>
+        </section>
+        <section id="player">
+            <span>
+                <h2>Player</h2>
+                <p>Squirrel Pelts:</p>
+                <p id="player-money"></p>
+            </span>
+            <span id="player-hand">
+                <img id="player-card-1">
+                <img id="player-card-2">
+            </span>
+        </section>
+        <section id="controls">
+            <span id="in-game-controls">
+                <button id="hit-button">Hit</button>
+                <button id="stand-button">Stand</button>
+                <button id="double-button">Double Down</button>
+            </span>
+        </section>
+    </div>
     
 </body>
 </html>
