start bet functionality

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <form id="bet-form">
             <label for="bet-input">Bet ur squirrels</label>
             <input id="bet-input" name="bet-input" type="text" placeholder="Enter amount..." />
-            <button type="submit" id="bet-button">Bet</button>
+            <input type="submit" id="bet-button" value="Bet">
             <p id="account-balance"
 
         </form>
