--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <label for="bet-input">Bet ur squirrels</label>
             <input id="bet-input" name="bet-input" type="text" placeholder="Enter amount..." />
             <input type="submit" id="bet-button" value="Bet">
-            <p id="account-balance"
-
+            <p id="account-balance"></p>
         </form>
     </div>
 
@@ -41,6 +40,7 @@
         </section>
         <section id="player">
             <span>
+                <div id="winner-display"></div>
                 <h2>Player</h2>
                 <p>Squirrel Pelts:</p>
                 <p id="player-money"></p>
