--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
-    <audio src="assets/casino-music.mp3" autoplay loop type="audio/mpeg"></audio>
+    <audio src="assets/cherokee.mp3" autoplay loop type="audio/mpeg"></audio>
 
     <div id="title">
         <h1>Beat the House!</h1>
