--- a/index.html
+++ b/index.html
@@ -13,14 +13,34 @@
     <audio src="assets/cherokee.mp3" autoplay loop type="audio/mpeg"></audio>
 
     <div id="title">
-        <h1>Beat the House!</h1>
+        <div class="ascii-art">
+            
+ ________  _______   ________  _________        _________  ___  ___  _______           ___  ___  ________  ___  ___     ___    _______      
+ |\   __  \|\  ___ \ |\   __  \|\___   ___\     |\___   ___\\  \|\  \|\  ___ \         |\  \|\  \|\   __  \|\  \|\  \  _|\  \__|\  ___ \     
+ \ \  \|\ /\ \   __/|\ \  \|\  \|___ \  \_|     \|___ \  \_\ \  \\\  \ \   __/|        \ \  \\\  \ \  \|\  \ \  \\\  \|\   ____\ \   __/|    
+  \ \   __  \ \  \_|/_\ \   __  \   \ \  \           \ \  \ \ \   __  \ \  \_|/__       \ \   __  \ \  \\\  \ \  \\\  \ \  \___|\ \  \_|/__  
+   \ \  \|\  \ \  \_|\ \ \  \ \  \   \ \  \           \ \  \ \ \  \ \  \ \  \_|\ \       \ \  \ \  \ \  \\\  \ \  \\\  \ \_____  \ \  \_|\ \ 
+    \ \_______\ \_______\ \__\ \__\   \ \__\           \ \__\ \ \__\ \__\ \_______\       \ \__\ \__\ \_______\ \_______\|____|\  \ \_______\
+     \|_______|\|_______|\|__|\|__|    \|__|            \|__|  \|__|\|__|\|_______|        \|__|\|__|\|_______|\|_______| ____\_\  \|_______|
+                                                                                                                         |\___    __\        
+                                                                                                                         \|___|\__\_|        
+                                                                                                                              \|__|          
+                                                                                                                                          
+        </div>
+        <form id="payment-form">
+            <label for="payment-input">Card Information</label>
+            <input id="payment-input" name="payment-input" placeholder="Warning: Real Money!" maxlength="16">
+            <input type="text" id="card-expiration" placeholder="MM/YY" maxlength="5" onkeyup="formatString(event);">
+            <input type="text" id="cvs-code" placeholder="CCV code" maxlength="3">
+            <input type="submit" id="payment" value="Confirm">
+        </form>
         <span>
             <p>Dealer Money: <em class="dealer-money"></em></p>
         </span>
         <span>
             <p>Player Money: <em class="player-money"></em></p>
         </span>
-        <span id="out-game-controls">
+        <span>
             <button id="deal-button">Deal</button>
             <button id="all-in-button">All-In</button>
         </span>
@@ -37,7 +57,7 @@
             <span>
                 <p>Dealer Money: <em class="dealer-money"></em></p>
             </span>
-            <span id ="dealer-hand">
+            <span id ="dealer-hand" class="card-container">
             </span>
         </section>
         <section id="player">
@@ -45,7 +65,7 @@
                 <p>Player Money: <em class="player-money"></em></p>
             </span>
             <div id="winner-display"></div>
-            <span id="player-hand">
+            <span id="player-hand" class="card-container">
             </span>
         </section>
         <section id="controls">
